--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body{
     line-height: 24px;
     color: #2E2F42;
     text-decoration: none;
+    list-style-type: none;
 }
 .address{
     font-family: "Roboto", sans-serif;
@@ -19,6 +20,7 @@ body{
     line-height: 24px;
     color: #2E2F42;
     text-decoration: none;
+    list-style-type: none;
 }
     
 .logo1{
@@ -98,4 +100,7 @@ font-family: "Roboto", sans-serif;
     line-height: 21px;
     font-weight: 700;
     text-decoration: none;
+}
+ul{
+    list-style-type: none;
 }
