--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 body{
     font-family: "Roboto", sans-serif;
     color: #434455; 
-    background-color: #FFFFF;
+    background-color: #ffff;
     font-size: 16px;
-    font-height: 24px;
+    line-height: 24px;
+    
 }
 .navigation{
     font-family: "Roboto", sans-serif;
@@ -24,21 +25,25 @@ body{
     list-style-type: none;
 }
     
-.logo1{
+.logo_span{
     font-family: "Raleway", sans-serif;
-    color: #4D5AE5;
+    color: #2e2f42;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.17;
     font-weight: 700;
     text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.03;
 }
 .logo2{
 font-family:"Raleway", sans-serif;
 color:#2E2F42;
 font-size: 18px;
-line-height: 21px;
+line-height: 1.17;
 font-weight: 700;
 text-decoration: none;
+text-transform: uppercase;
+letter-spacing: 0.03;
 }
 .header2{
 
@@ -98,9 +103,11 @@ font-family: "Roboto", sans-serif;
     font-family: "Raleway", sans-serif;
     color: #F4F4FD;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.17;
     font-weight: 700;
     text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.03;
 }
 ul{
     list-style-type: none;
