--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body{
     font-size: 16px;
     letter-spacing: 2%;
     color:#434455;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
 }
 /* header */
 .navigation{
