--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,19 @@ body{
 .studio{
     color:#2e2f42;
     font-size: 18px;
+    letter-spacing: 0.03em
 }
 .studio_nav{
     color: #2E2F42
 }
-.studio_nav:hover,
+.studio_nav:hover{
+    color: #404BBF;
+    letter-spacing: 0.03em
+}
 .studio_nav:active{
     color:#404BBF;
     text-decoration: underline;
+    letter-spacing: 0.03em
 }
 a{
     text-decoration:none
@@ -92,6 +97,14 @@ button{
 .team{
     background-color: #F4F4FD;
     text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
+}
+.team_p{
+    line-height: 1.5
 }
 /* section 3 */
 .portfolio{
