--- a/css/styles.css
+++ b/css/styles.css
@@ -76,13 +76,13 @@ ul{
     font-family:"Roboto", sans-serif;
     font-weight: 700;
     font-size: 56px;
-    line-height: 0.93;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
     background-color: #2E2F42;
 }
-button{
+.button{
     color:#ffffff;
     background-color: #4D5AE5;
     font-weight: 500;
@@ -90,6 +90,12 @@ button{
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
+    cursor: pointer;
+}
+.button:focus,
+.button:hover{
+    background-color: #404BBF;
+    cursor:pointer;
 }
 /* section 1 */
 
@@ -108,8 +114,13 @@ button{
 }
 /* section 3 */
 .portfolio{
-    text-align: center;
     background-color: #ffffff;
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
 }
 /* footer */
 .web_footer {
