portfolio section update

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,20 @@ ul{
     letter-spacing: 0.02em;
     color:#2e2f42;
 }
+.services{
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+.serv_head{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
+}
 /* footer */
 .web_footer {
     color: #4D5AE5;
