--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ ul{
     color:#2e2f42;
     text-transform: capitalize;
 }
-.serv_p{
+.ser_p{
     font-size: 16px;
     line-height: 1.5;
     color:#434455;
