--- a/css/styles.css
+++ b/css/styles.css
@@ -140,9 +140,10 @@ ul{
     background-color: #ffffff;
     text-align: center;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-size: 36px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
     color:#2e2f42;
 }
 .services{
@@ -154,8 +155,8 @@ ul{
 }
 .serv_head{
     font-weight: 500;
-    font-size: 36px;
-    line-height: 1.11;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color:#2e2f42;
     text-transform: capitalize;
