--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,31 @@ ul{
     letter-spacing: 0.02em;
     color:#2e2f42;
 }
+.teamheader {
+    background-color: #ffffff;
+    text-align: center;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+.names{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
 .team_p{
-    line-height: 1.5
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-transform: capitalize
 }
 /* section 3 */
 .portfolio{
