section hero, section 1 fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,14 +149,16 @@ ul{
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-transform: capitalize;
+    background-color: #FFFFFF
 }
 .team_p{
     font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-size: 16px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-transform: capitalize
+    color: #434455;
+    text-transform: capitalize;
+    background-color: #FFFFFF;
 }
 /* section 3 */
 .portfolio{
