--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ ul{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #ffffff;
+    color: #2e2f42;
 }
 .serv-head{
     font-weight: 500;
