--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@ body{
 .studio_nav{
     color: #2E2F42
 }
-.studio_nav:hover,
 .studio_nav:focus{
     color:#404BBF;
     text-decoration: underline;
@@ -178,7 +177,7 @@ ul{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #ffffff;
+    color: #2e2f42;
 }
 .serv-head{
     font-weight: 500;
